# Chessy

./: CMakeLists.txt  README.md  test
include/: common.hpp
include/chess/: chess_board.hpp  chess_piece.hpp  position.hpp
src/client/: main.cpp
src/client/networking/: client_network.cpp  client_network.hpp
src/server/: main.cpp
src/server/chess/: chess_board.cpp  chess_piece.cpp
src/server/networking/: server_network.cpp  server_network.hpp
tests/: CMakeLists.txt  test_chess_board.cpp
